--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mvp-lista-compras",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
